--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,5 @@
 name: Generate Snake
 
-# Controls when the action will run. This action runs every 6 hours.
 on:
   schedule:
     # every 6 hours
@@ -12,10 +11,10 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # Checks repo under $GITHUB_WORKSPACE, so your job can access it
+      # Checkout the code
       - uses: actions/checkout@v2
 
-      # Generates the snake  
+      # Generate the snake GIF and SVG
       - uses: Platane/snk@master
         id: snake-gif
         with:
@@ -23,14 +22,14 @@ jobs:
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
-      # Show the status of the build
+      # Show git status for debugging
       - run: git status
 
-      # Push the changes using PAT (Personal Access Token) if needed
+      # Push changes using the new PAT
       - name: Push changes
         uses: ad-m/github-push-action@master
         with:
-          github_token: ${{ secrets.GH_TOKEN }}  # Use your PAT secret here
+          github_token: ${{ secrets.GH_TOKEN }}  # Use the PAT secret here
           branch: master
           force: true
 
@@ -40,5 +39,4 @@ jobs:
           target_branch: output
           build_dir: dist
         env:
-          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # Use your PAT secret here
-
+          GITHUB_TOKEN: ${{ secrets.GH_TOKEN }}  # Use the PAT secret here
